--- a/ext/examples/helloworld/rust/Cargo.toml
+++ b/ext/examples/helloworld/rust/Cargo.toml
@@ -7,7 +7,8 @@ edition = "2021"
 prost = "0.12"
 tonic = { version = "0.11", features = ["transport"] }
 tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time"] }
-tokio-stream = "0.1"
+tokio-stream = { version = "0.1.17", features = ["net"] }
+
 tower = { version = "0.4", features = ["util"] }
 
 [build-dependencies]
