--- a/codex-cli/Dockerfile
+++ b/codex-cli/Dockerfile
@@ -41,6 +41,11 @@ ENV PATH=$PATH:/usr/local/share/npm-global/bin
 # Install codex
 COPY dist/codex.tgz codex.tgz
 RUN npm install -g codex.tgz \
+  && INSTALL_ROOT="/usr/local/share/npm-global/lib/node_modules/@openai/codex" \
+  && if [ -d "${INSTALL_ROOT}/vendor" ]; then \
+       chmod 755 "${INSTALL_ROOT}"/vendor/*/codex/codex "${INSTALL_ROOT}"/vendor/*/path/rg; \
+       chown -R node:node "${INSTALL_ROOT}/vendor"; \
+     fi \
   && npm cache clean --force \
   && rm -rf /usr/local/share/npm-global/lib/node_modules/codex-cli/node_modules/.cache \
   && rm -rf /usr/local/share/npm-global/lib/node_modules/codex-cli/tests \
