--- a/ext/docker/pi/Dockerfile
+++ b/ext/docker/pi/Dockerfile
@@ -39,17 +39,26 @@ ENV NPM_CONFIG_PREFIX=/usr/local/share/npm-global
 ENV PATH=$PATH:/usr/local/share/npm-global/bin
 
 # Install codex
-COPY dist/codex.tgz codex.tgz
+COPY codex-cli/dist/codex.tgz codex.tgz
 RUN npm install -g codex.tgz \
   && INSTALL_ROOT="/usr/local/share/npm-global/lib/node_modules/@openai/codex" \
   && if [ -d "${INSTALL_ROOT}/vendor" ]; then \
-       chmod 755 "${INSTALL_ROOT}"/vendor/*/codex/codex "${INSTALL_ROOT}"/vendor/*/path/rg; \
+       chmod 755 "${INSTALL_ROOT}"/vendor/*/codex/codex "${INSTALL_ROOT}"/vendor/*/codex-app-server/codex-app-server "${INSTALL_ROOT}"/vendor/*/path/rg; \
        chown -R node:node "${INSTALL_ROOT}/vendor"; \
+       APP_SERVER_BIN=$(find "${INSTALL_ROOT}/vendor" -maxdepth 3 -type f -name codex-app-server -perm -111 | head -n 1); \
+       if [ -n "$APP_SERVER_BIN" ]; then \
+         ln -sf "$APP_SERVER_BIN" /usr/local/share/npm-global/bin/codex-app-server; \
+       fi; \
      fi \
   && npm cache clean --force \
   && rm -rf /usr/local/share/npm-global/lib/node_modules/codex-cli/node_modules/.cache \
   && rm -rf /usr/local/share/npm-global/lib/node_modules/codex-cli/tests \
   && rm -rf /usr/local/share/npm-global/lib/node_modules/codex-cli/docs
+
+# Make the TCP proxy available inside the image and accessible from the default home directory.
+COPY --chown=node:node ext/docker/pi/app-server-proxy.js /home/node/app-server-proxy.js
+RUN ln -sf /home/node/app-server-proxy.js /usr/local/share/npm-global/bin/codex-app-server-proxy && \
+  mkdir -p /home/node/.codex
 
 # Inside the container we consider the environment already sufficiently locked
 # down, therefore instruct Codex CLI to allow running without sandboxing.
@@ -57,8 +66,13 @@ ENV CODEX_UNSAFE_ALLOW_NO_SANDBOX=1
 
 # Copy and set up firewall script as root.
 USER root
-COPY scripts/init_firewall.sh /usr/local/bin/
+COPY codex-cli/scripts/init_firewall.sh /usr/local/bin/
 RUN chmod 500 /usr/local/bin/init_firewall.sh
 
 # Drop back to non-root.
 USER node
+
+# Default workspace under the user's home directory so it can be bind-mounted easily.
+WORKDIR /home/node/workdir
+RUN mkdir -p /home/node/workdir && \
+  printf 'sandbox_mode = "danger-full-access"\n' > /home/node/.codex/config.toml
