Link SDK proxy vendor to packaged Codex binary

--- a/ext/docker/pi/Dockerfile
+++ b/ext/docker/pi/Dockerfile
@@ -63,6 +63,8 @@ RUN ln -sf /home/node/app-server-proxy.js /usr/local/share/npm-global/bin/codex-
 # Stage the TypeScript SDK runtime so the SDK proxy can load it directly.
 COPY --chown=node:node sdk/typescript/dist /home/node/codex-sdk/dist
 COPY --chown=node:node sdk/typescript/package.json /home/node/codex-sdk/package.json
+RUN ln -sf /usr/local/share/npm-global/lib/node_modules/@openai/codex/vendor /home/node/codex-sdk/vendor \
+  && chown -h node:node /home/node/codex-sdk/vendor
 RUN mkdir -p /home/node/node_modules/@openai \
   && ln -sf /home/node/codex-sdk /home/node/node_modules/@openai/codex-sdk
 
