Run examples container as node user

--- a/ext/examples/Dockerfile
+++ b/ext/examples/Dockerfile
@@ -2,7 +2,10 @@ FROM node:20-slim
 
 WORKDIR /examples
 
-COPY ext/examples/*.js /examples/
-COPY ext/examples/slash-commands /examples/slash-commands
+COPY --chown=node:node ext/examples/*.js /examples/
+COPY --chown=node:node ext/examples/slash-commands /examples/slash-commands
+RUN chown -R node:node /examples
+
+USER node
 
 CMD ["node", "/examples/hello-app-server.js"]
