Install utilities in examples image

--- a/ext/examples/Dockerfile
+++ b/ext/examples/Dockerfile
@@ -1,5 +1,12 @@
 FROM node:20-slim
 
+RUN apt-get update && apt-get install -y --no-install-recommends \
+  curl \
+  git \
+  less \
+  procps \
+  && rm -rf /var/lib/apt/lists/*
+
 WORKDIR /examples
 
 COPY --chown=node:node ext/examples/*.js /examples/
