Run examples container as node user (#40)
* Run examples container as node user

* Install utilities in examples image

--- a/ext/examples/Dockerfile
+++ b/ext/examples/Dockerfile
@@ -1,8 +1,18 @@
 FROM node:20-slim
 
+RUN apt-get update && apt-get install -y --no-install-recommends \
+  curl \
+  git \
+  less \
+  procps \
+  && rm -rf /var/lib/apt/lists/*
+
 WORKDIR /examples
 
-COPY ext/examples/*.js /examples/
-COPY ext/examples/slash-commands /examples/slash-commands
+COPY --chown=node:node ext/examples/*.js /examples/
+COPY --chown=node:node ext/examples/slash-commands /examples/slash-commands
+RUN chown -R node:node /examples
+
+USER node
 
 CMD ["node", "/examples/hello-app-server.js"]
