--- a/ext/docker/pi/Dockerfile
+++ b/ext/docker/pi/Dockerfile
@@ -15,6 +15,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
   iproute2 \
   ipset \
   iptables \
+  iputils-ping \
   jq \
   less \
   libssl3 \
