docker/pi: automate MCP server provisioning during image builds (#49)
* docker/pi: automate default MCP server setup

* docker/pi: automate and parameterize MCP setup in image builds

* docker/pi: parameterize and automate MCP provisioning in image builds

--- a/ext/docker/pi/Dockerfile
+++ b/ext/docker/pi/Dockerfile
@@ -2,6 +2,14 @@ FROM node:24-bookworm
 
 ARG TZ
 ENV TZ="$TZ"
+ARG ENABLE_DEFAULT_MCP_SERVERS=1
+ARG PLAYWRIGHT_MCP_PACKAGE="@playwright/mcp"
+ARG PLAYWRIGHT_MCP_VERSION="latest"
+ARG CHROME_MCP_PACKAGE="chrome-devtools-mcp"
+ARG CHROME_MCP_VERSION="latest"
+ARG GITHUB_MCP_PACKAGE="@modelcontextprotocol/server-github"
+ARG GITHUB_MCP_VERSION="latest"
+ARG OPENAI_DOCS_MCP_URL="https://developers.openai.com/mcp"
 
 # Install basic development tools, ca-certificates, and iptables/ipset, then clean up apt cache to reduce image size
 RUN apt-get update && apt-get install -y --no-install-recommends \
@@ -60,6 +68,25 @@ RUN npm install -g codex.tgz \
   && rm -rf /usr/local/share/npm-global/lib/node_modules/codex-cli/tests \
   && rm -rf /usr/local/share/npm-global/lib/node_modules/codex-cli/docs
 
+RUN if [ "$ENABLE_DEFAULT_MCP_SERVERS" = "1" ]; then \
+      set -eux; \
+      for spec in \
+        "Playwright|${PLAYWRIGHT_MCP_PACKAGE}@${PLAYWRIGHT_MCP_VERSION}" \
+        "Chrome DevTools|${CHROME_MCP_PACKAGE}@${CHROME_MCP_VERSION}" \
+        "GitHub|${GITHUB_MCP_PACKAGE}@${GITHUB_MCP_VERSION}"; do \
+        label=${spec%%|*}; \
+        package_spec=${spec#*|}; \
+        echo "Installing optional ${label} MCP package (${package_spec})"; \
+        if npm install -g "$package_spec"; then \
+          echo "Installed ${label} MCP package (${package_spec})"; \
+        else \
+          echo "WARNING: failed to install ${label} MCP package (${package_spec}); Codex will still use npx fallback at runtime."; \
+        fi; \
+      done; \
+    else \
+      echo "Skipping default MCP package installation (ENABLE_DEFAULT_MCP_SERVERS=${ENABLE_DEFAULT_MCP_SERVERS})"; \
+    fi
+
 # Make the TCP proxy available inside the image and accessible from the default home directory.
 COPY --chown=node:node ext/docker/pi/app-server-proxy.js /home/node/app-server-proxy.js
 COPY --chown=node:node ext/docker/pi/sdk-proxy.js /home/node/sdk-proxy.js
@@ -88,4 +115,22 @@ USER node
 # Default workspace under the user's home directory so it can be bind-mounted easily.
 WORKDIR /home/node/workdir
 RUN mkdir -p /home/node/workdir && \
-  printf 'sandbox_mode = "danger-full-access"\n' > /home/node/.codex/config.toml
+  cat <<EOF > /home/node/.codex/config.toml
+sandbox_mode = "danger-full-access"
+
+[mcp_servers.openai_docs]
+url = "${OPENAI_DOCS_MCP_URL}"
+
+[mcp_servers.playwright]
+command = "npx"
+args = ["-y", "${PLAYWRIGHT_MCP_PACKAGE}@${PLAYWRIGHT_MCP_VERSION}"]
+
+[mcp_servers.chrome_devtools]
+command = "npx"
+args = ["-y", "${CHROME_MCP_PACKAGE}@${CHROME_MCP_VERSION}"]
+
+[mcp_servers.github]
+command = "npx"
+args = ["-y", "${GITHUB_MCP_PACKAGE}@${GITHUB_MCP_VERSION}"]
+bearer_token_env_var = "CODEX_GITHUB_PERSONAL_ACCESS_TOKEN"
+EOF
